Fixed spacing on mobile

--- a/style.css
+++ b/style.css
@@ -62,8 +62,6 @@ h2 {
 }
 
 .project h1 {
-    
-
     margin-top: 0;
     margin-bottom: .5em;
 }
@@ -71,6 +69,10 @@ h2 {
 .project li p {
     margin-top: .5em;
     margin-bottom: .5em;
+}
+
+.project ul {
+    margin-bottom: 1.5em;
 }
 
 .project img {
